--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/custom-styles.css"
             ],
             "scripts": []
           },
