--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -15,9 +14,15 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "editor": [
+        "dist/editor/editor",
+        "dist/editor"
+      ]
+    }
   },
   "angularCompilerOptions": {
-    "strictTemplates": true,
+    "strictTemplates": true
   }
 }
