feat(import): add import dialog

--- a/angular.json
+++ b/angular.json
@@ -103,6 +103,7 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
+            "eslintConfig": "./.eslintrc",
             "lintFilePatterns": [
               "src/**/*.ts",
               "src/**/*.html"
@@ -155,14 +156,11 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "projects/editor/tsconfig.lib.json",
-              "projects/editor/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
+            "lintFilePatterns": [
+              "projects/editor/src/**/*.ts",
+              "projects/editor/src/**/*.html"
             ]
           }
         }
