--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:editor": "ng build editor --watch",
+    "build-app:prod": "ng build formly-editor --configuration production",
+    "build-editor": "ng build editor --watch",
+    "build-editor:prod": "ng build editor --configuration production",
     "test": "ng test",
     "e2e": "ng e2e",
     "lint": "ng lint --fix",
