build: use forked ngx-formly project

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - run: 'npm ci && npm run build:deploy'
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
