--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "postinstall": "ngcc",
     "ng": "ng",
     "start": "ng serve",
-    "build-editor:dev": "ng build editor --watch",
-    "build-editor:prod": "ng build editor --configuration production",
-    "build-app:prod": "ng build formly-editor --configuration production",
-    "build:deploy": "npm run build-editor:prod && npm run build-app:prod",
+    "build:deploy": "ng build formly-editor --configuration production",
     "test": "ng test",
     "e2e": "ng e2e",
     "lint": "ng lint --fix",
@@ -29,15 +26,13 @@
     "@angular/platform-browser": "13.3.11",
     "@angular/platform-browser-dynamic": "13.3.11",
     "@angular/router": "13.3.11",
-    "@ngx-formly/core": "5.10.29",
-    "@ngx-formly/material": "5.10.29",
     "file-saver-es": "2.0.5",
     "lodash-es": "4.17.21",
-    "moment": "2.29.1",
-    "moment-timezone": "0.5.33",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "moment": "2.29.4",
+    "moment-timezone": "0.5.34",
+    "rxjs": "7.5.5",
+    "tslib": "2.4.0",
+    "zone.js": "0.11.6"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "13.3.8",
@@ -56,7 +51,7 @@
     "@types/node": "12.20.33",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "6.0.2",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
