--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "13.3.8",
-    "@angular-eslint/builder": "1.2.0",
-    "@angular-eslint/eslint-plugin": "1.2.0",
-    "@angular-eslint/eslint-plugin-template": "1.2.0",
-    "@angular-eslint/schematics": "1.2.0",
-    "@angular-eslint/template-parser": "1.2.0",
+    "@angular-eslint/builder": "13.5.0",
+    "@angular-eslint/eslint-plugin": "13.5.0",
+    "@angular-eslint/eslint-plugin-template": "13.5.0",
+    "@angular-eslint/schematics": "13.5.0",
+    "@angular-eslint/template-parser": "13.5.0",
     "@angular/cli": "13.3.8",
     "@angular/compiler-cli": "13.3.11",
     "@angular/localize": "13.3.11",
@@ -49,11 +49,11 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash-es": "^4.17.5",
     "@types/node": "12.20.33",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@typescript-eslint/eslint-plugin": "5.9.1",
+    "@typescript-eslint/parser": "5.9.1",
     "codelyzer": "6.0.2",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
+    "eslint": "^8.2.0",
+    "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~3.6.0",
@@ -66,6 +66,6 @@
     "ng-packagr": "^13.3.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.6.4"
+    "typescript": "4.5.5"
   }
 }
