feat(editor): improve change detection, drag/drop

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "paths": {
         "@ngx-formly/*": [
             "projects/ngx-formly/src/*/src/public_api",
-            "projects/ngx-formly/src/ui/*/src/public_api"],
+            "projects/ngx-formly/src/ui/*/src/public_api"
+        ],
         "editor": [
             "projects/editor/src/public-api",
         ]
