chore: add override flags

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "noImplicitOverride": true,
     "target": "es2015",
     "module": "es2020",
     "lib": [
