feat(text-editor): add text editor with codemirror

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "13.3.11",
     "@angular/platform-browser-dynamic": "13.3.11",
     "@angular/router": "13.3.11",
+    "codemirror": "^5.65.11",
     "file-saver-es": "2.0.5",
     "lodash-es": "4.17.21",
     "moment": "2.29.4",
@@ -45,6 +46,7 @@
     "@angular/cli": "13.3.8",
     "@angular/compiler-cli": "13.3.11",
     "@angular/localize": "13.3.11",
+    "@types/codemirror": "^5.60.7",
     "@types/file-saver-es": "^2.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
