--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@angular/platform-browser": "13.3.11",
     "@angular/platform-browser-dynamic": "13.3.11",
     "@angular/router": "13.3.11",
+    "@ngrx/store": "^13.2.0",
     "codemirror": "^5.65.11",
     "file-saver-es": "2.0.5",
+    "immer": "^9.0.19",
     "lodash-es": "4.17.21",
     "moment": "2.29.4",
     "moment-timezone": "0.5.34",
@@ -72,6 +74,7 @@
     "protractor": "~7.0.0",
     "tailwindcss": "^3.2.4",
     "ts-node": "~8.3.0",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "eslint-plugin-ngrx": "^2.0.0"
   }
 }
