--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "codelyzer": "6.0.2",
     "eslint": "^8.2.0",
     "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-jsdoc": "40.0.0",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -68,7 +68,7 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "1.5.0",
     "ng-packagr": "^13.3.1",
     "postcss": "^8.4.21",
     "protractor": "~7.0.0",
