--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -15,6 +15,12 @@
       "options": {
         "tabWidth": 2
       }
+    },
+    {
+      "files": "*.yml",
+      "options": {
+        "tabWidth": 2
+      }
     }
   ]
 }
