chore: setup library for publishing

--- a/package.json
+++ b/package.json
@@ -1,82 +1,82 @@
 {
-    "name": "formly-editor",
-    "version": "0.0.0",
-    "description": "A tool used to create/edit formly forms",
-    "author": "Samuel Esan",
-    "scripts": {
-        "postinstall": "ngcc",
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build --configuration production",
-        "test": "ng test",
-        "e2e": "ng e2e",
-        "lint:app": "ng lint formly-editor --fix",
-        "lint:editor": "ng lint editor --fix",
-        "pretty": "prettier --write \"./**/*.{ts,js,json,html}\""
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "13.3.11",
-        "@angular/cdk": "13.3.9",
-        "@angular/common": "13.3.11",
-        "@angular/compiler": "13.3.11",
-        "@angular/core": "13.3.11",
-        "@angular/forms": "13.3.11",
-        "@angular/material": "13.3.9",
-        "@angular/material-moment-adapter": "13.3.9",
-        "@angular/platform-browser": "13.3.11",
-        "@angular/platform-browser-dynamic": "13.3.11",
-        "@angular/router": "13.3.11",
-        "@ngrx/store": "^13.2.0",
-        "@ngx-formly/core": "^6.1.8",
-        "@ngx-formly/material": "^6.1.8",
-        "codemirror": "^5.65.11",
-        "file-saver-es": "2.0.5",
-        "immer": "^9.0.19",
-        "lodash-es": "4.17.21",
-        "moment": "2.29.4",
-        "moment-timezone": "0.5.34",
-        "rxjs": "7.5.5",
-        "tslib": "2.4.0",
-        "zone.js": "0.11.6"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "13.3.8",
-        "@angular-eslint/builder": "13.5.0",
-        "@angular-eslint/eslint-plugin": "13.5.0",
-        "@angular-eslint/eslint-plugin-template": "13.5.0",
-        "@angular-eslint/schematics": "13.5.0",
-        "@angular-eslint/template-parser": "13.5.0",
-        "@angular/cli": "13.3.8",
-        "@angular/compiler-cli": "13.3.11",
-        "@angular/localize": "13.3.11",
-        "@types/codemirror": "^5.60.7",
-        "@types/file-saver-es": "^2.0.1",
-        "@types/jasmine": "~3.6.0",
-        "@types/jasminewd2": "~2.0.3",
-        "@types/lodash-es": "^4.17.5",
-        "@types/node": "12.20.33",
-        "@typescript-eslint/eslint-plugin": "5.9.1",
-        "@typescript-eslint/parser": "5.9.1",
-        "autoprefixer": "^10.4.13",
-        "codelyzer": "6.0.2",
-        "eslint": "^8.2.0",
-        "eslint-plugin-import": "2.25.2",
-        "eslint-plugin-jsdoc": "40.0.0",
-        "eslint-plugin-prefer-arrow": "1.2.2",
-        "jasmine-core": "~3.6.0",
-        "jasmine-spec-reporter": "~5.0.0",
-        "karma": "~6.4.0",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage-istanbul-reporter": "~3.0.2",
-        "karma-jasmine": "~4.0.0",
-        "karma-jasmine-html-reporter": "1.5.0",
-        "ng-packagr": "^13.3.1",
-        "postcss": "^8.4.21",
-        "protractor": "~7.0.0",
-        "tailwindcss": "^3.2.4",
-        "ts-node": "~8.3.0",
-        "typescript": "4.6.2",
-        "eslint-plugin-ngrx": "^2.0.0"
-    }
+  "name": "formly-editor",
+  "version": "0.0.0",
+  "description": "A tool used to create/edit formly forms",
+  "author": "Samuel Esan",
+  "scripts": {
+    "postinstall": "ngcc",
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build --configuration production",
+    "build:editor": "ng build editor --configuration production",
+    "test": "ng test",
+    "e2e": "ng e2e",
+    "lint:app": "ng lint formly-editor --fix",
+    "lint:editor": "ng lint editor --fix",
+    "pretty": "prettier --write \"./**/*.{ts,js,json,html}\"",
+    "build-tailwind-css": "tailwindcss -c ./projects/editor/tailwind.config.js -o ./projects/editor/assets/styles/tailwind.scss"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "13.3.11",
+    "@angular/cdk": "13.3.9",
+    "@angular/common": "13.3.11",
+    "@angular/compiler": "13.3.11",
+    "@angular/core": "13.3.11",
+    "@angular/forms": "13.3.11",
+    "@angular/material": "13.3.9",
+    "@angular/material-moment-adapter": "13.3.9",
+    "@angular/platform-browser": "13.3.11",
+    "@angular/platform-browser-dynamic": "13.3.11",
+    "@angular/router": "13.3.11",
+    "@ngrx/store": "^13.2.0",
+    "@ngx-formly/core": "^6.1.8",
+    "@ngx-formly/material": "^6.1.8",
+    "codemirror": "^5.65.11",
+    "file-saver-es": "2.0.5",
+    "immer": "^9.0.19",
+    "lodash-es": "4.17.21",
+    "rxjs": "7.5.5",
+    "tslib": "2.4.0",
+    "zone.js": "0.11.6"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "13.3.8",
+    "@angular-eslint/builder": "13.5.0",
+    "@angular-eslint/eslint-plugin": "13.5.0",
+    "@angular-eslint/eslint-plugin-template": "13.5.0",
+    "@angular-eslint/schematics": "13.5.0",
+    "@angular-eslint/template-parser": "13.5.0",
+    "@angular/cli": "13.3.8",
+    "@angular/compiler-cli": "13.3.11",
+    "@angular/localize": "13.3.11",
+    "@types/codemirror": "^5.60.7",
+    "@types/file-saver-es": "^2.0.1",
+    "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/lodash-es": "^4.17.5",
+    "@types/node": "12.20.33",
+    "@typescript-eslint/eslint-plugin": "5.9.1",
+    "@typescript-eslint/parser": "5.9.1",
+    "autoprefixer": "^10.4.13",
+    "codelyzer": "6.0.2",
+    "eslint": "^8.2.0",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-jsdoc": "40.0.0",
+    "eslint-plugin-ngrx": "^2.0.0",
+    "eslint-plugin-prefer-arrow": "1.2.2",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "1.5.0",
+    "ng-packagr": "^13.3.1",
+    "postcss": "^8.4.21",
+    "protractor": "~7.0.0",
+    "tailwindcss": "^3.2.4",
+    "ts-node": "~8.3.0",
+    "typescript": "4.6.2"
+  }
 }
