--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,9 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss",
-              "src/assets/custom-styles.css"
+              "./projects/editor/assets/styles/styles.scss",
+              "./projects/editor/assets/styles/tailwind.scss",
+              "src/styles.scss"
             ],
             "scripts": [],
             "vendorChunk": true,
