--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@angular/platform-browser": "14.3.0",
     "@angular/platform-browser-dynamic": "14.3.0",
     "@angular/router": "14.3.0",
-    "@ngrx/store": "^13.2.0",
+    "@ngrx/store": "^14.3.2",
     "@ngx-formly/core": "^6.1.8",
     "@ngx-formly/material": "^6.1.8",
     "codemirror": "^5.65.11",
@@ -42,6 +42,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "14.2.12",
+    "@angular-eslint/builder": "14.4.0",
+    "@angular-eslint/eslint-plugin": "14.4.0",
+    "@angular-eslint/eslint-plugin-template": "14.4.0",
+    "@angular-eslint/schematics": "14.4.0",
+    "@angular-eslint/template-parser": "14.4.0",
     "@angular/cli": "14.2.12",
     "@angular/compiler-cli": "14.3.0",
     "@angular/localize": "14.3.0",
