--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
             "buildOptimizer": false,
             "sourceMap": true,
             "optimization": false,
-            "namedChunks": true
+            "namedChunks": true,
+            "allowedCommonJsDependencies": ["codemirror"]
           },
           "configurations": {
             "production": {
