--- a/projects/editor/package.json
+++ b/projects/editor/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@sesan07/ngx-formly-editor",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "A configurable editor for ngx-formly forms.",
   "author": "Samuel Esan <samuel.esan@proton.me> (https://sesan.dev)",
   "license": "GPL-3.0",
   "homepage": "https://github.com/sesan07/formly-editor-app#readme",
   "peerDependencies": {
-    "@angular/core": "^13.3.11",
-    "@angular/material": "^13.3.9",
-    "@ngrx/store": "^13.2.0",
+    "@angular/core": "^14",
+    "@angular/material": "^14",
+    "@ngrx/store": "^14",
     "@ngx-formly/core": "^6.1.8",
     "@types/codemirror": "^5.60.7",
     "@types/file-saver-es": "^2.0.1",
@@ -16,7 +16,10 @@
     "codemirror": "^5.65.11",
     "file-saver-es": "2.0.5",
     "immer": "^9.0.19",
-    "lodash-es": "4.17.21",
+    "lodash-es": "^4.17.21",
+    "nanoid": "^4.0.2"
+  },
+  "dependencies": {
     "tslib": "^2.0.0"
   }
 }
