--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "13.3.8",
+    "@angular-eslint/builder": "13.5.0",
+    "@angular-eslint/eslint-plugin": "13.5.0",
+    "@angular-eslint/eslint-plugin-template": "13.5.0",
+    "@angular-eslint/schematics": "13.5.0",
+    "@angular-eslint/template-parser": "13.5.0",
     "@angular/cli": "13.3.8",
     "@angular/compiler-cli": "13.3.11",
     "@angular/localize": "13.3.11",
