chore: update dependencies

--- a/projects/editor/package.json
+++ b/projects/editor/package.json
@@ -6,15 +6,15 @@
   "license": "GPL-3.0",
   "homepage": "https://github.com/sesan07/formly-editor-app#readme",
   "peerDependencies": {
-    "@angular/core": "^14",
-    "@angular/material": "^14",
-    "@ngrx/store": "^14",
-    "@ngx-formly/core": "^6.1.8",
+    "@angular/core": "13 || 14",
+    "@angular/material": "13 || 14",
+    "@ngrx/store": "13 || 14",
+    "@ngx-formly/core": "^6",
     "@types/codemirror": "^5.60.7",
     "@types/file-saver-es": "^2.0.1",
     "@types/lodash-es": "^4.17.5",
     "codemirror": "^5.65.11",
-    "file-saver-es": "2.0.5",
+    "file-saver-es": "^2.0.5",
     "immer": "^9.0.19",
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.2"
