--- a/projects/editor/package.json
+++ b/projects/editor/package.json
@@ -8,6 +8,8 @@
   "peerDependencies": {
     "@angular/core": "13 || 14",
     "@angular/material": "13 || 14",
+    "@ng-dnd/core": "^2.0.2",
+    "@ng-dnd/multi-backend": "^2.0.2",
     "@ngrx/store": "13 || 14",
     "@ngx-formly/core": "^6",
     "@types/codemirror": "^5.60.7",
