feat(bootstrap): support swapping between formly material and bootstrap

--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@ng-dnd/core": "^2.0.2",
     "@ng-dnd/multi-backend": "^2.0.2",
     "@ngrx/store": "^13.2.0",
-    "@ngx-formly/core": "^6.2.1",
-    "@ngx-formly/material": "^6.2.1",
+    "@ngx-formly/core": "6.2.2",
+    "@ngx-formly/material": "6.2.2",
+    "@ngx-formly/bootstrap": "6.2.2",
+    "bootstrap": "^5.3.2",
     "codemirror": "^5.65.11",
     "file-saver-es": "2.0.5",
     "immer": "^9.0.19",
