build: add shorthand styles to exports

--- a/projects/editor/package.json
+++ b/projects/editor/package.json
@@ -23,5 +23,13 @@
   },
   "dependencies": {
     "tslib": "^2.0.0"
+  },
+  "exports": {
+    "./styles": {
+      "sass": "./assets/styles/styles.scss"
+    },
+    "./tailwind": {
+      "sass": "./assets/styles/tailwind.scss"
+    }
   }
 }
