build: update peer dependencies

--- a/projects/editor/package.json
+++ b/projects/editor/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@sesan07/ngx-formly-editor",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "A configurable editor for ngx-formly forms.",
   "author": "Samuel Esan <samuel.esan@proton.me> (https://sesan.dev)",
   "license": "MIT",
   "homepage": "https://github.com/sesan07/formly-editor#readme",
   "peerDependencies": {
-    "@angular/core": "13 || 14",
-    "@angular/material": "13 || 14",
+    "@angular/core": ">=15.0.0",
+    "@angular/material": ">=15.0.0",
     "@ng-dnd/core": "^2.0.2",
     "@ng-dnd/multi-backend": "^2.0.2",
-    "@ngrx/store": "13 || 14",
-    "@ngx-formly/core": "^6",
+    "@ngrx/store": ">=15.0.0",
+    "@ngx-formly/core": "^6.0.0",
     "@types/codemirror": "^5.60.7",
     "@types/file-saver-es": "^2.0.1",
     "@types/lodash-es": "^4.17.5",
