--- a/angular.json
+++ b/angular.json
@@ -75,7 +75,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "formly-editor:build"
+            "browserTarget": "formly-editor:build",
+            "host": "0.0.0.0"
           },
           "configurations": {
             "production": {
