--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "A tool used to create/edit formly forms",
   "author": "Samuel Esan",
   "scripts": {
-    "postinstall": "ngcc",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --configuration production",
@@ -18,64 +17,70 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "18.0.1",
-    "@angular/cdk": "18.0.1",
-    "@angular/common": "18.0.1",
-    "@angular/compiler": "18.0.1",
-    "@angular/core": "18.0.1",
-    "@angular/forms": "18.0.1",
-    "@angular/material": "18.0.1",
-    "@angular/material-moment-adapter": "18.0.1",
-    "@angular/platform-browser": "18.0.1",
-    "@angular/platform-browser-dynamic": "18.0.1",
-    "@angular/router": "18.0.1",
+    "@angular/animations": "^18.0.1",
+    "@angular/cdk": "^18.0.1",
+    "@angular/common": "^18.0.1",
+    "@angular/compiler": "^18.0.1",
+    "@angular/core": "^18.0.1",
+    "@angular/forms": "^18.0.1",
+    "@angular/material": "^18.0.1",
+    "@angular/material-moment-adapter": "^18.0.1",
+    "@angular/platform-browser": "^18.0.1",
+    "@angular/platform-browser-dynamic": "^18.0.1",
+    "@angular/router": "^18.0.1",
     "@ng-dnd/core": "^2.0.2",
     "@ng-dnd/multi-backend": "^2.0.2",
-    "@ngx-formly/core": "6.2.2",
-    "@ngx-formly/material": "6.2.2",
-    "@ngx-formly/bootstrap": "6.2.2",
-    "bootstrap": "^5.3.2",
-    "codemirror": "^5.65.11",
+    "@ngrx/store": "^17.2.0",
+    "@ngx-formly/core": "^6.3.2",
+    "@ngx-formly/material": "^6.3.2",
+    "@ngx-formly/bootstrap": "^6.3.2",
+    "bootstrap": "^5.3.3",
+    "codemirror": "^5.65.16",
     "file-saver-es": "2.0.5",
-    "immer": "^9.0.19",
+    "immer": "^10.1.1",
     "lodash-es": "4.17.21",
-    "nanoid": "^4.0.2",
-    "rxjs": "7.5.5",
-    "tslib": "2.4.0",
+    "nanoid": "^5.0.7",
+    "rxjs": "^7.8.1",
+    "tslib": "2.6.2",
     "zone.js": "0.14.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "18.0.2",
-    "@angular/cli": "18.0.2",
-    "@angular/compiler-cli": "18.0.1",
-    "@angular/localize": "18.0.1",
-    "@types/codemirror": "^5.60.7",
-    "@types/file-saver-es": "^2.0.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/lodash-es": "^4.17.5",
-    "@types/node": "12.20.33",
-    "@typescript-eslint/eslint-plugin": "5.9.1",
-    "@typescript-eslint/parser": "5.9.1",
-    "autoprefixer": "^10.4.13",
+    "@angular-devkit/build-angular": "^18.0.2",
+    "@angular-eslint/builder": "^18.0.1",
+    "@angular-eslint/eslint-plugin": "^18.0.1",
+    "@angular-eslint/eslint-plugin-template": "^18.0.1",
+    "@angular-eslint/schematics": "^18.0.1",
+    "@angular-eslint/template-parser": "^18.0.1",
+    "@angular/cli": "^18.0.2",
+    "@angular/compiler-cli": "^18.0.1",
+    "@angular/localize": "^18.0.1",
+    "@types/codemirror": "^5.60.15",
+    "@types/file-saver-es": "^2.0.3",
+    "@types/jasmine": "~5.1.4",
+    "@types/jasminewd2": "~2.0.13",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "20.13.0",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
+    "autoprefixer": "^10.4.19",
     "codelyzer": "6.0.2",
-    "eslint": "^8.2.0",
-    "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-jsdoc": "40.0.0",
-    "eslint-plugin-ngrx": "^2.0.0",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "1.5.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsdoc": "48.2.7",
+    "eslint-plugin-ngrx": "^2.1.4",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "jasmine-core": "~5.1.2",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.3",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "2.1.0",
     "ng-packagr": "^18.0.0",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.38",
     "protractor": "~7.0.0",
-    "tailwindcss": "^3.2.4",
-    "ts-node": "~8.3.0",
+    "tailwindcss": "^3.4.3",
+    "ts-node": "~10.9.2",
     "typescript": "5.4.5"
   }
 }
