--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A tool used to create/edit formly forms",
   "author": "Samuel Esan",
   "scripts": {
+    "postinstall": "patch-package",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --configuration production",
@@ -31,15 +32,16 @@
     "@ng-dnd/core": "^2.0.2",
     "@ng-dnd/multi-backend": "^2.0.2",
     "@ngrx/store": "^17.2.0",
-    "@ngx-formly/core": "^6.3.2",
-    "@ngx-formly/material": "^6.3.2",
-    "@ngx-formly/bootstrap": "^6.3.2",
+    "@ngx-formly/bootstrap": "6.3.2",
+    "@ngx-formly/core": "6.3.2",
+    "@ngx-formly/material": "6.3.2",
     "bootstrap": "^5.3.3",
     "codemirror": "^5.65.16",
     "file-saver-es": "2.0.5",
     "immer": "^10.1.1",
     "lodash-es": "4.17.21",
     "nanoid": "^5.0.7",
+    "patch-package": "^8.0.0",
     "rxjs": "^7.8.1",
     "tslib": "2.6.2",
     "zone.js": "0.14.6"
