--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "karma-jasmine-html-reporter": "2.1.0",
     "ng-packagr": "^18.0.0",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.0",
     "protractor": "~7.0.0",
     "tailwindcss": "^3.4.3",
     "ts-node": "~10.9.2",
