build: use latest minor version of ngx-formly

--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "@ng-dnd/core": "^3.0.0",
     "@ng-dnd/multi-backend": "^3.0.0",
     "@ngrx/store": "^17.2.0",
-    "@ngx-formly/bootstrap": "6.3.2",
-    "@ngx-formly/core": "6.3.2",
-    "@ngx-formly/material": "6.3.2",
+    "@ngx-formly/bootstrap": "^6.3.2",
+    "@ngx-formly/core": "^6.3.2",
+    "@ngx-formly/material": "^6.3.2",
     "bootstrap": "^5.3.3",
     "codemirror": "^5.65.16",
     "file-saver-es": "2.0.5",
