--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -6,8 +6,8 @@ server {
 
     location = /health {
         access_log off;
-        add_header 'Content-Type' 'application/json';
-        return 200 '{ "status": "OK!" }';
+        add_header 'Content-Type' 'text/plain';
+        return 200 'Status: OK!\n';
     }
 
     location / {
