--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@angular/platform-browser": "^19.2.7",
     "@angular/platform-browser-dynamic": "^19.2.7",
     "@angular/router": "^19.2.7",
-    "@ng-dnd/core": "^3.0.0",
-    "@ng-dnd/multi-backend": "^3.0.0",
-    "@ngrx/store": "^18.0.1",
+    "@ng-dnd/core": "^4.0.0",
+    "@ng-dnd/multi-backend": "^4.0.0",
+    "@ngrx/store": "^19.1.0",
     "@ngx-formly/bootstrap": "^6.3.2",
     "@ngx-formly/core": "^6.3.2",
     "@ngx-formly/material": "^6.3.2",
@@ -46,29 +46,21 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.8",
-    "@angular-eslint/builder": "^18.0.1",
-    "@angular-eslint/eslint-plugin": "^18.0.1",
-    "@angular-eslint/eslint-plugin-template": "^18.0.1",
-    "@angular-eslint/schematics": "^18.0.1",
-    "@angular-eslint/template-parser": "^18.0.1",
     "@angular/cli": "^19.2.8",
     "@angular/compiler-cli": "^19.2.7",
     "@angular/localize": "^19.2.7",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.25.0",
     "@types/codemirror": "^5.60.15",
     "@types/file-saver-es": "^2.0.3",
     "@types/jasmine": "~5.1.4",
     "@types/jasminewd2": "~2.0.13",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "20.13.0",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
+    "@types/node": "22.14.1",
+    "angular-eslint": "19.3.0",
     "autoprefixer": "^10.4.19",
     "codelyzer": "6.0.2",
-    "eslint": "^8.56.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsdoc": "48.2.7",
-    "eslint-plugin-ngrx": "^2.1.4",
-    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint": "^9.23.0",
     "jasmine-core": "~5.1.2",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.3",
@@ -82,6 +74,7 @@
     "protractor": "~7.0.0",
     "tailwindcss": "^3.4.3",
     "ts-node": "~10.9.2",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.27.0"
   }
 }
