--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "karma-jasmine-html-reporter": "2.1.0",
     "ng-packagr": "^19.2.2",
     "postcss": "^8.4.38",
-    "prettier": "^3.3.0",
+    "prettier": "3.3.3",
     "protractor": "~7.0.0",
     "tailwindcss": "^3.4.3",
     "ts-node": "~10.9.2",
